--- a/esp.conf
+++ b/esp.conf
@@ -1,3 +1,4 @@
+# 已弃用！
 #dev_id=3
 dev_id=9
 #dev_mode=esp32
@@ -19,4 +20,6 @@ led_stop_time=20:00
 light_accumulation_target = 2000
 # 基础光照（2选1）。即每天至少补光多少分钟
 # led_base_time= 120
+# 最低水位值
+min_water_level=500
 
